cabal-version:      2.4
name:               horture
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Norbert Dzikowski
maintainer:         norbert@perun.network

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library horture-lib
    default-extensions:     TemplateHaskell
                            , TypeApplications
                            , TypeOperators
                            , OverloadedStrings
    exposed-modules:        Horture
                            , Horture.Authorize
                            , Horture.Path
                            , Horture.CommandCenter.CommandCenter
                            , Horture.CommandCenter.Event
                            , Horture.CommandCenter.State
                            , Horture.Scene
                            , Horture.Horture
                            , Horture.Logging
                            , Horture.X11
                            , Horture.Shader.Shader
                            , Horture.Error
                            , Horture.Command
                            , Horture.Events
                            , Horture.Event
                            , Horture.State
                            , Horture.Behaviour
                            , Horture.Render
                            , Horture.Config
                            , Horture.Object
                            , Horture.Program
                            , Horture.Loader
                            , Horture.Effect
                            , Horture.Gif
                            , Run

    -- Modules included in this library but not exported.
    other-modules:          Horture.EventSource.EventSource
                            , Horture.EventSource.Random
                            , Horture.EventSource.Logger
                            , Horture.EventSource.Local
                            , Horture.EventSource.Controller
                            , Horture.EventSource.Controller.Controller
                            , Horture.EventSource.Controller.TwitchController
                            , Horture.EventSource.WebSocketClient
                            , Horture.Loader.Error
                            , Horture.Loader.Asset
                            , Horture.Loader.State
                            , Horture.Loader.Config
                            , Horture.Loader.TextureLoader
                            , Horture.Loader.FilePreloader

    -- LANGUAGE extensions used by modules in this package.
    build-depends:          base ^>=4.14.3.0
                            , twitch-api
                            , horture-server-lib
                            , X11
                            , text
                            , word-wrap
                            , raw-strings-qq
                            , servant-client
                            , servant-client-core
                            , data-default
                            , bytestring
                            , exceptions
                            , co-log
                            , aeson
                            , http-api-data
                            , http-client
                            , http-client-tls
                            , random
                            , warp
                            , wai
                            , http-types
                            , async
                            , freer-simple
                            , synchronous-channels
                            , OpenGL
                            , lens
                            , JuicyPixels
                            , filepath
                            , directory
                            , mtl
                            , containers
                            , linear
                            , vty
                            , brick
                            , array
                            , websockets
                            , wuss
                            , GLFW-b
                            , GLUtil
    ghc-options:
                            -Wall
                            -fno-warn-name-shadowing
                            -fno-warn-unticked-promoted-constructors
                            -fno-warn-orphans
    hs-source-dirs:         src/horture
    default-language:       Haskell2010

library horture-server-lib
    default-extensions:     TemplateHaskell
                            , TypeApplications
                            , TypeOperators
                            , OverloadedStrings
    hs-source-dirs:     src/server
    default-language:   Haskell2010
    ghc-options:
                        -Wall
                        -fno-warn-name-shadowing
                        -fno-warn-unticked-promoted-constructors
                        -fno-warn-orphans

    build-depends:      base ^>=4.14.3.0
                        , twitch-api
                        , text
                        , lens
                        , servant
                        , servant-client
                        , servant-client-core
                        , http-types
                        , http-client
                        , http-client-tls
                        , data-default
                        , mtl
                        , synchronous-channels
                        , wai
                        , warp
                        , warp-tls
                        , websockets
                        , wai-websockets
                        , aeson
                        , random
                        , bytestring
                        , cryptonite
                        , memory

    exposed-modules:    Horture.Server.Config
                        , Horture.Server.Message
                        , Horture.Server.Websocket
                        , Horture.Server.Server

    -- other-modules:

library twitch-api
    default-extensions:     TemplateHaskell
                            , TypeApplications
                            , TypeOperators
                            , OverloadedStrings
    hs-source-dirs:     src/twitch
    default-language:   Haskell2010
    ghc-options:
                            -Wall
                            -fno-warn-name-shadowing
                            -fno-warn-unticked-promoted-constructors
                            -fno-warn-orphans

    build-depends:      base ^>=4.14.3.0
                        , aeson
                        , text
                        , http-api-data
                        , http-types
                        , servant
                        , servant-client

    exposed-modules:    Twitch
                        , Twitch.EventSub
                        , Twitch.EventSub.Event
                        , Twitch.EventSub.Notification
                        , Twitch.Rest
                        , Twitch.Rest.Authorization
                        , Twitch.Rest.DataResponse
                        , Twitch.Rest.Types

    other-modules:      Twitch.Rest.Authentication
                        , Twitch.Rest.Token
                        , Twitch.EventSub.Condition
                        , Twitch.EventSub.Request
                        , Twitch.EventSub.Response
                        , Twitch.EventSub.Transport
                        , Twitch.EventSub.BitsVoting
                        , Twitch.EventSub.ChannelPointsVoting
                        , Twitch.EventSub.Choices
                        , Twitch.EventSub.EntitlementObject
                        , Twitch.EventSub.GlobalCooldown
                        , Twitch.EventSub.Image
                        , Twitch.EventSub.Contribution
                        , Twitch.EventSub.Message
                        , Twitch.EventSub.Outcomes
                        , Twitch.EventSub.Poll
                        , Twitch.EventSub.Product
                        , Twitch.EventSub.Reward

test-suite horture-test
  type:                     exitcode-stdio-1.0
  hs-source-dirs:           test
  main-is:                  Spec.hs
  build-depends:            base ^>=4.14.3.0
                            , horture-lib
                            , tasty
                            , tasty-hunit
  default-language:         Haskell2010

executable horture-client
    hs-source-dirs:         app/Client
    main-is:                Main.hs
    ghc-options:
                            -Wall
                            -fno-warn-name-shadowing
                            -threaded
                            -O2
    build-depends:          base ^>=4.14.3.0
                            , horture-lib
                            , optparse-applicative
    default-language:       Haskell2010

executable horture-server
  hs-source-dirs:           app/Server
  main-is:                  Main.hs
  ghc-options:
                            -Wall
                            -fno-warn-name-shadowing
                            -threaded
                            -O2
  other-modules:            Config
  build-depends:            base ^>=4.14.3.0
                            , horture-server-lib
                            , twitch-api
                            , directory
                            , optparse-applicative
                            , aeson
                            , text
                            , http-client-tls
                            , warp
                            , servant-client
                            , http-client
                            , bytestring
  default-language:         Haskell2010
