cabal-version:      2.4
name:               horture
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Norbert Dzikowski
maintainer:         norbert@perun.network

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library horture-lib
    default-extensions:     TemplateHaskell
                            , TypeApplications
                            , TypeOperators
                            , OverloadedStrings
                            , LambdaCase
                            , DataKinds
                            , GADTs
                            , FlexibleContexts
                            , FlexibleInstances
                            , ScopedTypeVariables
                            , TypeFamilies
                            , FunctionalDependencies
                            , NumericUnderscores
    exposed-modules:        Horture
                            , Horture.Authorize
                            , Horture.Path
                            , Horture.Audio
                            , Horture.Audio.Player
                            , Horture.Audio.PipeWire
                            , Horture.CommandCenter.CommandCenter
                            , Horture.CommandCenter.Event
                            , Horture.CommandCenter.State
                            , Horture.Scene
                            , Horture.Horture
                            , Horture.Logging
                            , Horture.Backend.X11
                            , Horture.Shader.Shader
                            , Horture.Error
                            , Horture.Command
                            , Horture.Initializer
                            , Horture.WindowGrabber
                            , Horture.GL
                            , Horture.Events
                            , Horture.Event
                            , Horture.State
                            , Horture.Behaviour
                            , Horture.Render
                            , Horture.Config
                            , Horture.Object
                            , Horture.Program
                            , Horture.Loader
                            , Horture.Effect
                            , Horture.Asset
                            , Horture.Constraints
                            , Horture.Character

    -- Modules included in this library but not exported.
    other-modules:          Horture.EventSource.EventSource
                            , Horture.Audio.Recorder
                            , Horture.Audio.Player.Player
                            , Horture.Audio.Player.Error
                            , Horture.Audio.Player.Protea
                            , Horture.Audio.Player.Effects
                            , Horture.Audio.Player.Horture
                            , Horture.Backend.X11.LinuxX11
                            , Horture.Backend.X11.X11
                            , Horture.Backend.X11.Initializer
                            , Horture.Initializer.Initializer
                            , Horture.Initializer.Environment
                            , Horture.EventSource.Random
                            , Horture.EventSource.Logger
                            , Horture.EventSource.Local
                            , Horture.EventSource.Twitch
                            , Horture.EventSource.Controller
                            , Horture.EventSource.Controller.Controller
                            , Horture.EventSource.Controller.TwitchController
                            , Horture.EventSource.WebSocketClient
                            , Horture.Loader.Error
                            , Horture.Loader.Asset
                            , Horture.Loader.State
                            , Horture.Loader.Config
                            , Horture.Loader.FontLoader
                            , Horture.Loader.TextureLoader
                            , Horture.Loader.FilePreloader
                            , Horture.Debug

    -- LANGUAGE extensions used by modules in this package.
    build-depends:          base ^>=4.14.3.0
                            , haskell-twitch-api
                            , horture-server-lib
                            , X11
                            , text
                            , word-wrap
                            , raw-strings-qq
                            , servant-client
                            , servant-client-core
                            , data-default
                            , bytestring
                            , exceptions
                            , co-log
                            , extra
                            , aeson
                            , http-api-data
                            , http-client
                            , http-client-tls
                            , random
                            , ring-buffers
                            -- Enforce correct version for `ring-buffers` to work.
                            , contiguous ==0.5.2
                            , proteaaudio-sdl
                            , warp
                            , wai
                            , http-types
                            , async
                            , freer-simple
                            , vector
                            , synchronous-channels
                            , OpenGL
                            , unliftio
                            , OpenGLRaw
                            , lens
                            , JuicyPixels
                            , async
                            , filepath
                            , directory
                            , mtl
                            , containers
                            , linear
                            , vty
                            , brick
                            , array
                            , carray
                            , fft
                            , stm
                            , loop
                            , websockets
                            , wuss
                            , GLFW-b
                            , GLUtil
                            , freetype2
    c-sources:
                            cbits/record.c
    pkgconfig-depends:
                            libpipewire-0.3
    ghc-options:
                            -Wall
                            -fno-warn-name-shadowing
                            -fno-warn-unticked-promoted-constructors
                            -fno-warn-orphans
    hs-source-dirs:         src
    default-language:       Haskell2010

test-suite horture-test
  type:                     exitcode-stdio-1.0
  hs-source-dirs:           test
  main-is:                  Spec.hs
  build-depends:            base ^>=4.14.3.0
                            , horture-lib
                            , tasty
                            , tasty-hunit
  default-language:         Haskell2010

executable horture-client
  default-extensions:     LambdaCase
  hs-source-dirs:         app/Client
  main-is:                Main.hs
  ghc-options:
                          -Wall
                          -fno-warn-name-shadowing
                          -threaded
                          -O2
  build-depends:          base ^>=4.14.3.0
                          , horture-lib
                          , optparse-applicative
  default-language:       Haskell2010
