cabal-version:      2.4
name:               horture
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Norbert Dzikowski
maintainer:         norbert@perun.network

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library horture-lib
    default-extensions:     TemplateHaskell
                            , TypeApplications
                            , TypeOperators
                            , OverloadedStrings
                            , LambdaCase
                            , DataKinds
                            , GADTs
                            , FlexibleContexts
                            , FlexibleInstances
                            , ScopedTypeVariables
                            , TypeFamilies
                            , FunctionalDependencies
                            , NumericUnderscores
    exposed-modules:        Horture
                            , Horture.Authorize
                            , Horture.Backend
                            , Horture.Initializer.Initializer
                            , Horture.Initializer.Environment
                            , Horture.Path
                            , Horture.Audio
                            , Horture.Audio.Audio
                            , Horture.Audio.Player
                            , Horture.CommandCenter.CommandCenter
                            , Horture.CommandCenter.GUI
                            , Horture.CommandCenter.InsetBoxShadow
                            , Horture.CommandCenter.Event
                            , Horture.CommandCenter.State
                            , Horture.Server
                            , Horture.Server.Protocol
                            , Horture.Server.Env
                            , Horture.Scene
                            , Horture.Horture
                            , Horture.Logging
                            , Horture.Shader.Shader
                            , Horture.Error
                            , Horture.Command
                            , Horture.Initializer
                            , Horture.WindowGrabber
                            , Horture.GL
                            , Horture.Events
                            , Horture.Event
                            , Horture.State
                            , Horture.Behaviour
                            , Horture.Render
                            , Horture.RenderBridge
                            , Horture.Config
                            , Horture.Object
                            , Horture.Program
                            , Horture.Loader
                            , Horture.Effect
                            , Horture.Asset
                            , Horture.Constraints
                            , Horture.Character


    -- Modules included in this library but not exported.
    other-modules:          Horture.EventSource.EventSource
                            , Horture.Backend.Types
                            , Horture.Audio.MacOS
                            , Horture.Audio.Recorder
                            , Horture.Audio.Recorder.Horture
                            , Horture.Audio.Player.Player
                            , Horture.Audio.Player.Error
                            , Horture.Audio.Player.Effects
                            , Horture.Audio.Player.Horture
                            , Horture.EventSource.Random
                            , Horture.EventSource.Logger
                            , Horture.EventSource.Local
                            , Horture.EventSource.Twitch
                            , Horture.EventSource.Controller
                            , Horture.EventSource.Controller.Controller
                            , Horture.EventSource.Controller.TwitchController
                            , Horture.EventSource.WebSocketClient
                            , Horture.Loader.Error
                            , Horture.Loader.Asset
                            , Horture.Loader.State
                            , Horture.Loader.Config
                            , Horture.Loader.FontLoader
                            , Horture.Loader.TextureLoader
                            , Horture.Loader.FilePreloader
                            , Horture.Debug


    -- LANGUAGE extensions used by modules in this package.
    build-depends:          base
                            , haskell-twitch-api
                            , horture-server-lib
                            , text >= 2.1.3
                            , word-wrap
                            , raw-strings-qq
                            , servant-client
                            , servant-client-core
                            , data-default
                            , bytestring
                            , exceptions
                            , co-log
                            , extra
                            , aeson
                            , http-api-data
                            , http-client
                            , http-client-tls
                            , random
                            , ring-buffer
                            , warp
                            , wai
                            , http-types
                            , async
                            , freer-simple >= 1.2.1.2
                            , vector
                            , synchronous-channels
                            , OpenGL
                            , unliftio
                            , OpenGLRaw
                            , lens
                            , JuicyPixels
                            , async
                            , filepath
                            , directory
                            , mtl
                            , containers
                            , linear
                            , vty
                            , vty-unix
                            , brick
                            , array
                            , carray
                            , fft >= 0.1.8.7
                            , stm
                            , loop
                            , websockets
                            , wuss
                            , GLFW-b
                            , GLUtil
                            , monomer
                            , network

    ghc-options:            -Wall
                            -fno-warn-name-shadowing
                            -fno-warn-unticked-promoted-constructors
                            -fno-warn-orphans
    hs-source-dirs:         src
    default-language:       Haskell2010

    if os(linux)
        exposed-modules: Horture.Audio.PipeWire
                         , Horture.Backend.X11

        other-modules: Horture.Backend.X11.LinuxX11
                       , Horture.Backend.X11.X11
                       , Horture.Backend.X11.Initializer
                       , Horture.Audio.Player.Protea
        build-depends: X11
                       , proteaaudio-sdl
                       -- Enforce correct version for `ring-buffers` to work.
                       , contiguous ==0.5.2
        cpp-options: -DPROTEA_ENABLED -DHORTURE_LINUX
        pkgconfig-depends: libpipewire-0.3
        c-sources: cbits/linux/record.c
    if os(osx)
        other-modules: Horture.Backend.MacOS
                     , Horture.Backend.MacOS.Initializer
                     , Horture.Backend.MacOS.Interface
        cpp-options: -DHORTURE_DARWIN
        include-dirs: cbits, cbits/macos
        includes: SCShim.h
                , render_bridge.h
                , audio_bridge.h
        install-includes: SCShim.h
                        , render_bridge.h
                        , audio_bridge.h
        c-sources: cbits/macos/SCShim.m
                 , cbits/macos/render_bridge.m
                 , cbits/macos/audio_bridge.m
        cc-options: -fobjc-arc
        frameworks: ScreenCaptureKit, CoreMedia, CoreVideo, AVFoundation, AppKit
        build-depends: contiguous ==0.6.5.0
                     , primitive-unlifted >=2.2.0.0


test-suite horture-test
  type:                     exitcode-stdio-1.0
  hs-source-dirs:           test
  main-is:                  Spec.hs
  build-depends:            base
                            , horture-lib
                            , tasty
                            , tasty-hunit
                            , synchronous-channels
                            , text
                            , data-default
  default-language:         Haskell2010

executable horture-client
  default-extensions:     LambdaCase
  hs-source-dirs:         app/Client
  main-is:                Main.hs
  ghc-options:
                          -Wall
                          -fno-warn-name-shadowing
                          -threaded
                          -O2
  build-depends:          base
                          , horture-lib
                          , optparse-applicative
                          , data-default
  default-language:       Haskell2010
